--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My 1st Page</title>
+	<title>Favorite Films</title>
 </head>
 <body>
 <h1>MY FAVORITE FILMS</h1>
