--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</table>
 </div>
 	<p>What is your favorite film?</p>
-	<form action="/thanks" method="post">
+	<form action="thanks.html" method="post">
 		<div>
 			<label>Favorite Film:</label>
 			<input type="text" name-="film">
