Link similar site in footer

--- a/index.html
+++ b/index.html
@@ -47,5 +47,13 @@
 		</div>
 		<button type="submit">Submit</button>
 	</form>
+	<footer>
+		<a href="http://www.listchallenges.com/top-50-my-favorite-movies-of-all-time">Similar Site</a>
+		<ol>
+			<li>Great use of images</li>
+			<li>Integration of images into a table</li>
+			<li>Interaction with users by use of votes, comments, etc</li>
+		</ol>
+	</footer>
 </body>
 </html>
