Add links to movie posters

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<li>History of Violence</li>
 	</ol>
 </div>
-<img src="http://ia.media-imdb.com/images/M/MV5BMTkxMTA5OTAzMl5BMl5BanBnXkFtZTgwNjA5MDc3NjE@._V1_UX182_CR0,0,182,268_AL_.jpg" alt="Pulp Fiction"/>
-<img src="http://ia.media-imdb.com/images/M/MV5BMTkzMDgyNjQwM15BMl5BanBnXkFtZTgwNTg2Mjc1MDE@._V1_UX182_CR0,0,182,268_AL_.jpg" alt="Princess Bride" /> 
-<img src="http://ia.media-imdb.com/images/M/MV5BMTczMzIzMTQ1OV5BMl5BanBnXkFtZTYwMDQwNjk2._V1_UX182_CR0,0,182,268_AL_.jpg" alt="History of Violence" />
+<a href="http://www.imdb.com/title/tt0110912/"><img src="http://ia.media-imdb.com/images/M/MV5BMTkxMTA5OTAzMl5BMl5BanBnXkFtZTgwNjA5MDc3NjE@._V1_UX182_CR0,0,182,268_AL_.jpg" alt="Pulp Fiction"/></a>
+<a href="http://www.imdb.com/title/tt0093779/"><img src="http://ia.media-imdb.com/images/M/MV5BMTkzMDgyNjQwM15BMl5BanBnXkFtZTgwNTg2Mjc1MDE@._V1_UX182_CR0,0,182,268_AL_.jpg" alt="Princess Bride" /></a>
+<a href="http://www.imdb.com/title/tt0399146/?ref_=fn_al_tt_1"><img src="http://ia.media-imdb.com/images/M/MV5BMTczMzIzMTQ1OV5BMl5BanBnXkFtZTYwMDQwNjk2._V1_UX182_CR0,0,182,268_AL_.jpg" alt="History of Violence" /></a>
 <div style="color:#006400">
 	<h2>Favorite Directors</h2>
 	<p>Any discussion of films has to include their directors.  Here is a list of my favorites by genre.</p>
